# ECS_framework

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  build_and_test.sh  main.cpp
 .github/: FUNDING.yml
dev/: TODO.md
example/invaders/: components.hpp  core.hpp  entities.hpp  game.hpp  renderer.hpp  stages.hpp  systems.hpp  update.hpp  utilities.hpp
example/invaders/systems/: ai.hpp  attack.hpp  collision.hpp  damage.hpp  death.hpp  game.hpp  health.hpp  input.hpp  item.hpp  movement.hpp  player.hpp  position.hpp  score.hpp  ui.hpp
include/ecs/: ecs.hpp
src/: base_sparse_set.hpp  components.hpp  components_iterator.hpp  core.hpp  entity_component_manager.hpp  grouping.hpp  macros.hpp  sparse_set.hpp  tags.hpp  timer.hpp  utilities.hpp
test/: CMakeLists.txt  core.hpp  run_tests.cpp  runner.hpp  test_runner.hpp
test/helpers/: components.hpp  utils.hpp
test/tests/: benchmarks.hpp  components.hpp  utilities.hpp
